Update keywords meta tag in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <title>RR Nagar - Shop Local, Support Local | Flowers, Crackers, Groceries, Services</title>
     <meta name="description" content="RR Nagar - Your one-stop shop for flowers, crackers, groceries, pet supplies, local services, and consultancy. Shop local and support your community in RR Nagar, Bengaluru." />
-    <meta name="keywords" content="RR Nagar, shop local, flowers, crackers, groceries, pet supplies, local services, consultancy, Bengaluru" />
+    <meta name="keywords" content="RR Nagar, ತಾಜಾ, ತ್ವರಿತ, ತೃಪ್ತಿಕರ" />
     <meta property="og:title" content="RR Nagar - Shop Local, Support Local" />
     <meta property="og:description" content="Your one-stop shop for flowers, crackers, groceries, pet supplies, local services, and consultancy in RR Nagar, Bengaluru." />
     <meta property="og:type" content="website" />
