Update all frontend API calls to use Cloud Run backend

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       rel="stylesheet"
     />
 
-    <title>RR Nagar - Shop Local, Support Local | Flowers, Crackers, Groceries, Services</title>
-    <meta name="description" content="RR Nagar - Your one-stop shop for flowers, crackers, groceries, pet supplies, local services, and consultancy. Shop local and support your community in RR Nagar, Bengaluru." />
+    <title>ತಾಜಾ, ತ್ವರಿತ, ತೃಪ್ತಿಕರ | Fresh. Fast. Fulfillment. | RR Nagar - Shop Local, Support Local</title>
+    <meta name="description" content="ತಾಜಾ, ತ್ವರಿತ, ತೃಪ್ತಿಕರ | Fresh. Fast. Fulfillment. | RR Nagar - Your one-stop shop for flowers, crackers, groceries, pet supplies, local services, and consultancy. Shop local and support your community in RR Nagar, Bengaluru." />
     <meta name="keywords" content="RR Nagar, shop local, flowers, crackers, groceries, pet supplies, local services, consultancy, Bengaluru" />
     <meta property="og:title" content="RR Nagar - Shop Local, Support Local" />
     <meta property="og:description" content="Your one-stop shop for flowers, crackers, groceries, pet supplies, local services, and consultancy in RR Nagar, Bengaluru." />
