Add subscriptions UI and async Maps load

--- a/frontend_index.html
+++ b/frontend_index.html
@@ -43,7 +43,7 @@ window.$RefreshSig$ = () => (type) => type;</script>
 
     <!-- Google Maps Autocomplete -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9t_Z_ow50vd0rSDNBPjzY7pZYWM12PeE&libraries=places"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9t_Z_ow50vd0rSDNBPjzY7pZYWM12PeE&libraries=places&loading=async"
       async
       defer
     ></script>
