--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <!-- Icons -->
     <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <link rel="icon" href="./favicon.ico" />
+    <link rel="apple-touch-icon" href="/logo.png" />
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <meta name="theme-color" content="#0f172a" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -36,7 +39,7 @@
 
     <!-- Google Maps Autocomplete -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9t_Z_ow50vd0rSDNBPjzY7pZYWM12PeE&libraries=places"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9t_Z_ow50vd0rSDNBPjzY7pZYWM12PeE&libraries=places&loading=async"
       async
       defer
     ></script>
