Resolve merge changes for feature/admins-ui

--- a/index.html
+++ b/index.html
@@ -34,6 +34,29 @@
     <meta name="twitter:image" content="/images/og-image.png" />
   </head>
 
+  <!-- Inline mobile fallback CSS: enforce mobile-only layout and small scroller behavior -->
+  <style>
+    @media (max-width: 1024px) {
+      /* Hide desktop two-column mega layout if present in DOM */
+      .home .mega-column { display: none !important; }
+      /* Ensure mobile grid is visible (grid on tablet) */
+      .home .mega-grid { display: grid !important; }
+    }
+
+    /* Mobile-only: horizontal scroller with small tiles */
+    @media (max-width: 480px) {
+      .home .mega-column { display: none !important; }
+      .home .mega-grid { display: flex !important; overflow-x: auto !important; gap: 12px !important; padding-left: 12px !important; scroll-snap-type: x mandatory !important; -webkit-overflow-scrolling: touch !important; }
+
+      .home .mega-grid .mega-ad { flex: 0 0 160px !important; width: 160px !important; max-width: 160px !important; height: 120px !important; margin: 8px 6px !important; box-shadow: none !important; border-radius: 10px !important; scroll-snap-align: start !important; }
+
+      .home .mega-grid .mega-ad img { width: 100% !important; height: 100% !important; object-fit: cover !important; border-radius: 10px !important; }
+
+      /* Reduce overlap from floating chat widget if present */
+      .whatsapp-float, .wh-widget { z-index: 3 !important; }
+    }
+  </style>
+
     <body>
     <div id="root"></div>
 
@@ -48,3 +71,31 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+<!-- Mobile/Tablet stylesheet cache-bust: appends a query param to the built CSS on small viewports so clients fetch updated CSS without needing a CDN purge -->
+<script>
+  (function(){
+    function bustIfMobile() {
+      try {
+        var w = window.innerWidth || document.documentElement.clientWidth;
+        if (w && w <= 1024) { // tablet + mobile
+          var links = document.querySelectorAll('link[rel="stylesheet"]');
+          links.forEach(function(l){
+            if (l.href && /\/assets\/index-/.test(l.getAttribute('href')) && !/[?&]cb=/.test(l.href)) {
+              l.href = l.href + (l.href.indexOf('?') !== -1 ? '&' : '?') + 'cb=' + Date.now();
+            }
+          });
+        }
+      } catch (e) { console.error('css-bust', e); }
+    }
+
+    if (document.readyState === 'complete' || document.readyState === 'interactive') {
+      setTimeout(bustIfMobile, 50);
+    } else {
+      window.addEventListener('DOMContentLoaded', bustIfMobile);
+    }
+
+    // also retry once after load in case styles are injected slightly later
+    window.addEventListener('load', function(){ setTimeout(bustIfMobile, 100); });
+  })();
+</script>
